# Voice_AI_Agent_RAG

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  flow.excalidraw
.github/workflows/: deploy.yml  task-definition-backend.json  task-definition-frontend.json
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: bot.py  config.py  database.py
backend/app/models/: document.py  equipment.py  rag.py
backend/app/routers/: equipment.py  stream.py
backend/app/services/: embeddings.py  rag.py  text_extraction.py
demo/: DEMO_SCRIPT.md  sample_manual.md  seed.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/components/: BotJsonCard.tsx  BotMessageBubble.tsx  RealTimeChatPanel.tsx  UserMessageBubble.tsx
frontend/src/hooks/: pipecat-chat-events.ts
frontend/src/pages/: Stream.tsx
frontend/src/types/: ChatMessage.ts  Chunk.ts
infrastructure/: cloudformation.yaml  cloudfront-config.json  destroy-aws.sh  setup-aws.sh
scripts/: build-and-push-ecr.sh  create-services.sh  deploy_aws.sh
